# routes/api.php
@@ -18,9 +18,10 @@ Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::resource('improve_program', 'ImproveProgram');
+Route::resource('motivation_program', 'ImproveProgram');
 Route::resource('scenario', 'BotPrototype');
-Route::post('improve_program/attach', 'ImproveProgram@attach');
-Route::get('users_of_providers/index', 'PlayerController@index');
-Route::get('users_of_providers/{id}/motivation_program', 'PlayerController@motivationSchedule');
+Route::resource('players_of_providers', 'PlayerController');
+Route::get('players_of_providers/{id}/motivation_program', 'PlayerController@motivationSchedule');
+Route::post('players_of_providers/attach_program', 'ImproveProgram@attach');
+
 Route::get('part', 'BotPrototype@parts');
